project initialized, with login

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11281,6 +11281,10 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+:root {
+    --acc-color: #f76d6d;
+}
+
 .header-img {
     background-image: url("https://picsum.photos/900/500");
     background-repeat: no-repeat;
@@ -11294,8 +11298,28 @@ textarea.form-control-lg {
     background-color: #0c172b;
 }
 
+.bg-acc {
+    background-color: var(--acc-color);
+}
+
 .navbar-collapse {
     flex-grow: unset;
+}
+
+.vh-75 {
+    min-height: 75vh;
+}
+
+.vh-65 {
+    min-height: 65vh;
+}
+
+.vh-60 {
+    min-height: 60vh;
+}
+
+.vh-50 {
+    min-height: 50vh;
 }
 
 .nav-link {
@@ -11306,15 +11330,9 @@ textarea.form-control-lg {
     font-size: 10vh;
 }
 
-.btn-cs {
+.white {
     color: white;
-    background-color: #0d6efd;
 }
-
-.wide-cs {
-    height: 200vh;
-}
-
 .calendar {
     color: #fff;
     background: #04b6e2;
